--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,25 @@
             <version>3.141.59</version>
         </dependency>
 
+        <!-- WebDriverManager dependencies -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.0.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Extent reports dependencies -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber6-adapter</artifactId>
+            <version>2.16.0</version>
             <scope>test</scope>
         </dependency>
 
