introduce POM, add another scenario

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -8,8 +8,9 @@ screenshot.rel.path=../screenshots/
 extent.reporter.pdf.start=true
 extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
 
-basefolder.name=test-reports
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+# below config is to create unique set of reports for each run.
+#basefolder.name=test-reports
+#basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
